--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         </nav>
         <main>
             <figure>
-                <a href="tarot.html"><img src="img/tarot/concertina5.gif" width="100%" alt="Concertina"></a>
+                <a href="tarot.html"><img src="img/Tarot/Concertina5.gif" width="100%" alt="Concertina"></a>
                 <figcaption>EXPRESSIVE TYPOGRAPHY CONCERTINA <br>(2025)</figcaption>
             </figure>
             <figure>
