fixing the index

--- a/index.html
+++ b/index.html
@@ -12,15 +12,6 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 </head>
 <body>
-        <div id="menu">
-            <menu>
-                <ul>
-                    <li><a href="about.html">PHOTO</a></li>
-                    <li><a href="about.html">DESIGN</a></li>
-                    <li><a href="about.html">ABOUT</a></li>
-                </ul>
-            </menu>
-        </div>
         <nav>
             <ul>
                 <li class="home-li">
@@ -49,15 +40,15 @@
                 <figcaption>EXPRESSIVE TYPOGRAPHY CONCERTINA <br>(2025)</figcaption>
             </figure>
             <figure>
-                <a href="animation.html"><img src="img/animation/animation2.gif" width="100%" height="100%" alt="Animation"></a>
+                <a href="animation.html"><img src="img/Animation/animation2.gif" width="100%" height="100%" alt="Animation"></a>
                 <figcaption>TYPE ANATOMY MOTION GRAPHIC <br>(2025)</figcaption>
             </figure>
             <figure>
-                <a href="assemblages.html"><img src="img/assemblages/assemblages0.gif" width="100%" alt="Collage Postcard"></a>
+                <a href="assemblages.html"><img src="img/Assemblages/assemblages0.gif" width="100%" alt="Collage Postcard"></a>
                 <figcaption>COLLAGE POSTCARDS <br>(2025)</figcaption>
             </figure>
             <figure>
-                <a href="interaction.html"><img src="img/figma/figma00.jpg" width="100%" height="100%" alt="Interaction"></a>
+                <a href="interaction.html"><img src="img/Figma/figma00.jpg" width="100%" height="100%" alt="Interaction"></a>
                 <figcaption>INTERACTION DESIGN</figcaption>
             </figure>
 
