--- a/tarot.html
+++ b/tarot.html
@@ -42,7 +42,7 @@
             <h2>(2025)</h2>
         </article>
         <article class="wide">
-            <img src="img/Tarot/concertina5.gif" alt="Tarot Concertina - Hero Image">
+            <img src="img/Tarot/Concertina5.gif" alt="Tarot Concertina - Hero Image">
         </article>
         <article class="wide">
             <h2>A TYPOGRAPHIC TAROT READING</h2>
