amended the about page

--- a/about.html
+++ b/about.html
@@ -73,6 +73,12 @@
                     <br><br>
                     2019 - Joy Ewart Youth Prize - <i>Winner</i> - Workshop Arts Centre
                 </p>
+                <h5>
+                    Publications
+                </h5>
+                <p>
+                    2025 - North - <i>Self Published</i> - Collected by Supply Store 
+                </p>
                 <p> 
                     <a href="https://fonts.google.com/specimen/Inclusive+Sans" target="_blank" rel="noopener noreferrer">Inclusive Sans</a> by Olivia King <br>
                     <a href="https://fonts.google.com/specimen/Courier+Prime" target="_blank" rel="noopener noreferrer">Courier Prime</a> by Alan Dague-Greene
